# internet-downloader

./: .env.example  .gitignore
.github/: README.md
internet-downloader-backend/: .gitignore  Cargo.toml
internet-downloader-backend/plugins/: file_urls.js  host.d.ts
internet-downloader-backend/src/: client_state_manager.rs  context.rs  download.rs  download_task.rs  download_writer_manager.rs  host_manager.rs  lib.rs  main.rs  network_manager.rs  plugin_registry.rs  shared_file_map.rs  state_manager.rs
internet-downloader-backend/src/db/: mod.rs  rows.rs  state_manager.rs
internet-downloader-backend/src/download/: download_manager.rs  items.rs  mod.rs  status.rs  verifier.rs
internet-downloader-backend/src/download/hosts/: mod.rs
internet-downloader-backend/src/utils/: file_utils.rs  mod.rs  network_utils.rs
internet-downloader-frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
internet-downloader-frontend/src/: downloadTypes.ts  index.css  main.tsx  router.ts  store.ts  vite-env.d.ts
internet-downloader-frontend/src/components/: AddDownloadModal.tsx  AppLayout.tsx  DefaultButton.tsx  DownloadGrid.tsx  DownloadRow.tsx  DownloadTask.tsx  DownloadUrlBar.tsx  RemoveDownloadModal.tsx  ResizableTableHead.tsx  SidebarGroup.tsx  SidebarItem.tsx  TopBarButton.tsx  TopBarSearch.tsx
internet-downloader-frontend/src/lib/: status_utils.ts
internet-downloader-frontend/src/pages/: index.tsx
internet-downloader-frontend/src/pages/test/: index.tsx
internet-downloader-frontend/src/pages/test2/: index.tsx
internet-downloader-frontend/src/routes/: __root.tsx  index.tsx
internet-downloader-frontend/src/routes/downloads/components/: BottomDetailsPane.tsx  DownloadsSidebar.tsx  DownloadsTable.tsx  DownloadsTopBar.tsx  FileTree.tsx
internet-downloader-frontend/src/routes/downloads/hooks/: useDownloadCounts.ts  useDownloadSpeed.tsx
internet-downloader-frontend/src/stores/: downloadStore.ts  uiStore.ts
