[package]
name = "internet-downloader-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
base64 = "0.22.1"
bincode = "2.0.1"
indexmap = "2.10.0"
reqwest = { version = "0.12.23", features = ["json"] }
scraper = "0.23.1"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread", "tokio-macros"] }
url = "2.5.4"
xxh3 = "0.1.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
