[package]
name = "internet-downloader-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
bitvec = { version = "1.0.1", features = ["serde"] }
blake3 = { version = "1.8.2", features = ["mmap", "rayon"] }
bytecheck = "0.8.2"
bytes = "1.11.1"
chrono = "0.4.42"
futures-util = "0.3.31"
http = "1.4.0"
indexmap = { version = "2.13.0", features = ["serde"] }
memmap2 = "0.9.9"
pin-project-lite = "0.2.17"
regex = { version = "1.12.2", features = ["use_std"] }
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls-no-provider", "http2", "charset", "system-proxy", "stream"] }
rkyv = { version = "0.8.12", features = ["arrayvec-0_7", "bytecheck", "bytes-1", "indexmap-2"] }
rquickjs = { version = "0.11.0", features = ["full-async", "parallel"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] } # replaces aws-lc-rs in reqwest which at the moment depends on having cmake installed in windows
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_with = "3.16.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "signal", "tokio-macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.17"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.release]
debug = true
strip = false 
